# flowbridge

./: Cargo.toml  DOCKER.md  deploy-instructions.sh
.claude/: settings.local.json
.github/workflows/: docker-publish.yml
src/: audio.rs  calendar.rs  main.rs  tui.rs
web/: Cargo.toml  Dockerfile  README.md  docker-compose.yml  implementation_plan.md  run.sh
web/data/: tasks.json
web/src/: main.rs
web/static/: index.html
web/static/css/: modern.css
web/static/js/: app.js
