[package]
name = "task"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "task"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
dialoguer = "0.11"
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.28"
crossterm = "0.28"
rodio = "0.17"
ical = "0.11"
reqwest = { version = "0.12", features = ["blocking"] }
